# pygac-fdr

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .stickler.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  deploy-sdist.yml  end-to-end.yaml  end2end.yaml
continuous_integration/: environment.yaml
etc/: pygac-fdr.yaml
pygac_fdr/: __init__.py  collect.py  config.py  crop.py  metadata.py  qflags.py  reader.py  update.py  utils.py  validation.py  version.py  writer.py
pygac_fdr/run/: __init__.py  attrs.py  reader.py  runner.py  utils.py  writer.py
pygac_fdr/runners/: crop.py  dump.py  mda_collect.py  mda_update.py  run.py  val_collect.py  val_plot.py
pygac_fdr/tests/: fetch_data.py  test_crop.py  test_end2end.py  test_end2end.yaml  test_end2end.yaml.template  test_metadata.py  test_writer.py
tools/: PYGAC_output_entropy_noise_CheckToDB.py  create-github-issue.sh  upload-test-data.sh
