[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pygac-fdr"
dynamic = ["version"]
description = "Python package for creating a Fundamental Data Record (FDR) of AVHRR GAC data using pygac"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "The Pytroll Team", email = "pytroll@googlegroups.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fsspec",
    "h5py",
    "netCDF4",
    "numpy",
    "pandas >=1.0.3",
    "pygac >=1.3.1",
    "pyyaml",
    "satpy",
    "setuptools_scm",
    "trollsift",
    "xarray >=0.15.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]
tests = [
    "cfchecker >=4.1.0",
    "matplotlib",
    "pytest",
    "pytest-cov",
    "pytest-testconfig",
]

[project.urls]
Homepage = "https://github.com/pytroll/pygac-fdr"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pygac_fdr/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pygac_fdr",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["A", "E", "W", "F", "N", "S", "TID", "C90", "T10", "T20"]
ignore = [
    # whitespace before ':' - doesn't work well with black
    "E203",
    # module level import not at top of file
    "E402",
    # line too long - let black worry about that
    "E501",
    # do not assign a lambda expression, use a def
    "E731",
]
exclude = [".eggs", "doc"]

[tool.ruff.lint.per-file-ignores]
"pygac_fdr/tests/*" = ["S101", "S603"]  # assert and subprocess allowed in tests

[tool.isort]
profile = "black"
skip_gitignore = true
force_to_top = true
default_section = "THIRDPARTY"
kown_first_party = "pygac_fdr"
